--- a/public/index.html
+++ b/public/index.html
@@ -7,14 +7,15 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="TextUtils is a utility which can be used to manipulate your text as you want."
+      content="TextUtils is a word counter and a character counting utility which can be used to manipulate your text as you want.
+      You can remove extra spaces or copy text as well as convert your text from uppercase to lowercase and lowercase to uppercase "
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 
-    <title>TextUtils = Home</title>
+    <title>TextUtils - Word counter | character counter | lowercase to uppercase | uppercase to lowercase</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
